--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,8 +5,39 @@
     </head>
     <body>
         <form method="POST">
-            <input type="search" name="tracksearch">
-          <input type="submit" value="Search">
-          </form>
+                <input type="search" name="tracksearch">
+            <input type="submit" value="Search">
+            <!-- <h2><b>Song Page</b></h2><br />
+            <div>Enter the song you want to search</div>
+            <input type="search" name="searchsong">
+            <input type="submit" value="Search song"><br />
+
+            <b><h2>Filter Song</b></h2><br/>
+            <div>Enter the artist_name that you  want to listen</div>
+            <input type="text" name="artist_name">
+            <div>Enter the album_name that you  want to listen</div>
+            <input type="text" name="album_name">
+            <div>Enter the range of track_pop that you  want to listen</div>
+            <input type="text" name="track_pop_lowerbound">
+            <input type="text" name="track_pop_upperbound">
+            <div>Enter the range of duration that you  want to listen</div>
+            <input type="text" name="duration_lowerbound">
+            <input type="text" name="duration_upperbound">
+            <div>Enter the range of vocal_rate that you  want to listen</div>
+            <input type="text" name="vocal_rate_lowerbound">
+            <input type="text" name="vocal_rate_upperbound">
+            <div>Enter the range of danceable_rate that you  want to listen</div>
+            <input type="text" name="danceable_rate_lowerbound">
+            <input type="text" name="danceanle_rate_upperbound">
+            <div>Enter the tempo that you  want to listen</div>
+            <input type="text" name="tempo">
+            <div>Enter the key that you  want to listen</div>
+            <input type="text" name="key"><br/>
+            <br/>
+            <input type="submit" value="filterSearch">
+
+            <b><h2>Your Playlist</b></h2><br/>
+            <input type="submit" value="playlist"> -->
+            </form>
     </body>
 </html>
