--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,7 +7,7 @@
         <form method="POST">
                 <input type="search" name="tracksearch">
             <input type="submit" value="Search">
-            <!-- <h2><b>Song Page</b></h2><br />
+            <h2><b>Song Page</b></h2><br />
             <div>Enter the song you want to search</div>
             <input type="search" name="searchsong">
             <input type="submit" value="Search song"><br />
@@ -37,7 +37,7 @@
             <input type="submit" value="filterSearch">
 
             <b><h2>Your Playlist</b></h2><br/>
-            <input type="submit" value="playlist"> -->
+            <input type="submit" value="playlist">
             </form>
     </body>
 </html>
