--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -4,6 +4,10 @@
         <title>Our Funky HTML Page</title>
     </head>
     <body>
-        {{username}}
+        <div>Your playlist song list below</div>
+        {{song}}
+
+        <div>click here back to the home page</div>
+        <input type="button" value="back">
     </body>
 </html>
