add hint on login page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Our Funky HTML Page</title>
+        <title>Homepage</title>
     </head>
     <body>
         <form method="POST">
