--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Our Funky HTML Page</title>
+        <title>Playlists</title>
     </head>
     <body>
         <div>Your playlist song list below</div>
