--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,16 @@
-Login
-<form action="/login" method="POST">
-  <input type="email" name="email" placeholder="Email">
-  <input type="password" name="password" placeholder="Password">
-  <input type="submit" name="login_submit" value="Login">
-</form>
-
+<!doctype html>
+<html>
+    <head>
+        <title>Login</title>
+    </head>
+    <body>
+      Login
+      <form action="/login" method="POST">
+        <input type="email" name="email" placeholder="Email">
+        <input type="password" name="password" placeholder="Password">
+        <input type="submit" name="login_submit" value="Login">
+      </form>
+      <br>
+      {{ message }}
+    </body>
+</html>
