--- a/templates/songpage.html
+++ b/templates/songpage.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>songname[0][0]</title>
+        <title>{{ songname[0][0] }}</title>
     </head>
     <body>
         <div>Your song information list below</div>
