--- a/templates/songpage.html
+++ b/templates/songpage.html
@@ -32,8 +32,16 @@
         <br/>
         key is: {{songname[0][8]}}
         <br/>
-
+        <form method="POST">
+        <div>please enter a word or sentence that you want to comment</div>
+        <input type="text" name="comment_text">
+        <br/>
+        <input type="submit" name="comment_content" value="Comment">
+        </form>
+        <br/>
+        <form method="POST">
         <div>click here back to the home page</div>
-        <input type="button" value="back">
+        <input type="submit" name="back_home_page" value="Back">
+        </form>
     </body>
 </html>
