--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -28,8 +28,9 @@
             <div>Enter the range of danceable_rate that you  want to listen</div>
             <input type="text" name="danceable_rate_lowerbound">
             <input type="text" name="danceable_rate_upperbound">
-            <div>Enter the tempo that you  want to listen</div>
-            <input type="text" name="tempo">
+            <div>Enter the range if tempo that you  want to listen</div>
+            <input type="text" name="tempo_lowerbound">
+            <input type="text" name="tempo_upperbound">
             <div>Enter the key that you  want to listen</div>
             <input type="text" name="key"><br/>
             <br/>
