--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,26 +12,26 @@
         </form>
         <form method="POST">
             <b><h2>Filter Song:</b></h2><br/>
-            <div>Enter the artist_name that you  want to listen</div>
+            <div>Enter the artist_name that you  want to listen -- please enter a exactly artisit name such as (Kate Bush)</div>
             <input type="text" name="artist_name">
-            <div>Enter the album_name that you  want to listen</div>
+            <div>Enter the album_name that you  want to listen -- please enter a exactly artisit name such as (Hounds Of Love)</div>
             <input type="text" name="album_name">
-            <div>Enter the range of track_pop that you  want to listen</div>
+            <div>Enter the range of track_pop that you  want to listen -- please enter the two number between 0 - 100</div>
             <input type="text" name="track_pop_lowerbound">
             <input type="text" name="track_pop_upperbound">
-            <div>Enter the range of duration that you  want to listen</div>
+            <div>Enter the range of duration that you  want to listen -- please enter the two number between 100000 - 300000</div>
             <input type="text" name="duration_lowerbound">
             <input type="text" name="duration_upperbound">
-            <div>Enter the range of vocal_rate that you  want to listen</div>
+            <div>Enter the range of vocal_rate that you  want to listen -- please enter the two number between 0 - 100</div>
             <input type="text" name="vocal_rate_lowerbound">
             <input type="text" name="vocal_rate_upperbound">
-            <div>Enter the range of danceable_rate that you  want to listen</div>
+            <div>Enter the range of danceable_rate that you  want to listen -- please enter the two number between 0 - 100 </div>
             <input type="text" name="danceable_rate_lowerbound">
             <input type="text" name="danceable_rate_upperbound">
-            <div>Enter the range if tempo that you  want to listen</div>
+            <div>Enter the range if tempo that you  want to listen -- please enter the two number between 0 - 200</div>
             <input type="text" name="tempo_lowerbound">
             <input type="text" name="tempo_upperbound">
-            <div>Enter the key that you  want to listen</div>
+            <div>Enter the key that you  want to listen -- please enter the two number between 0 - 12  </div>
             <input type="text" name="key"><br/>
             <br/>
             <input type="submit" name="filter_search_submit" value="Create Playlist">
