--- a/server/templates/songpage.html
+++ b/server/templates/songpage.html
@@ -33,14 +33,15 @@
         key is: {{songname[0][8]}}
         <br/>
         <br/>
-        comment is: 
+        comments: 
+        <br>
         {% for item in comment %}
-            {{item[0]}} comment by {{item[1]}}
+            {{item[0]}} | comment by {{item[1]}}
             <br>
         {% endfor%}
         <br/>
         <form method="POST">
-        <div>please enter a word or sentence that you want to comment</div>
+        <div>please enter a word or sentence that you want to comment: </div>
         <input type="text" name="comment_text">
         <br/>
         <input type="submit" name="comment_content" value="Comment">
