--- a/server/templates/create_playlist.html
+++ b/server/templates/create_playlist.html
@@ -19,5 +19,7 @@
         <form method="post">
             <input type="submit" name="back_button" value="back">
         </form>
+        If no song is selected, pressing "save" will not store the playlist. 
+        User will be redirected back to homepage. 
     </body>
 </html>
